# bwscanner

./: .gitignore  .pre-commit-config.yaml  README.md  bw.py  pyproject.toml
.github/workflows/: ci.yml
src/bwscan/: __main__.py  core.py
src/bwscanner/: __main__.py  builtwith.py  core.py  net.py  utils.py
tests/: test_utils.py  utils.py
